--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@payloadcms/payload-cloud": "3.42.0",
     "@payloadcms/plugin-seo": "^3.42.0",
     "@payloadcms/richtext-lexical": "3.42.0",
+    "@payloadcms/richtext-slate": "^3.44.0",
     "@payloadcms/translations": "^3.43.0",
     "@payloadcms/ui": "3.42.0",
     "cross-env": "^7.0.3",
