--- a/.github/workflows/ci-config.yml
+++ b/.github/workflows/ci-config.yml
@@ -16,14 +16,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 18
+          cache: pnpm
+
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9
+          run_install: false
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
-      # Optionnel : Payload génère du code TypeScript
-      - name: Build Payload types
-        run: npm run payload:generate:types
+      # Optionnel mais recommandé pour Payload (génération des types)
+      - name: Generate Payload types
+        run: pnpm payload:generate:types
         if: ${{ hashFiles('src/**') != '' }}
 
-      - name: Run ESLint
-        run: npm run lint
+      - name: Run linter
+        run: pnpm lint
