--- a/.github/workflows/ci-config.yml
+++ b/.github/workflows/ci-config.yml
@@ -1,4 +1,4 @@
-name: ci-config 
+name: ci-config
 
 on:
   pull_request:
@@ -7,7 +7,6 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -22,3 +21,36 @@ jobs:
 
       - name: Run ESLint
         run: npm run lint
+
+  typecheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm ci
+      - name: TypeScript check
+        run: npm run typecheck
+
+  payload-types:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm ci
+      - name: Generate Payload types
+        run: npm run generate:types
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      - run: npm ci
+      - name: Build Next.js app
+        run: npm run build
