--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@next/eslint-plugin-next": "^16.0.7",
     "@types/node": "^22.16.0",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
