--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@next/eslint-plugin-next": "^16.0.7",
     "@payloadcms/db-mongodb": "3.45.0",
     "@payloadcms/next": "3.45.0",
     "@payloadcms/payload-cloud": "3.45.0",
@@ -29,7 +28,7 @@
     "bcrypt": "^6.0.0",
     "cross-env": "^7.0.3",
     "graphql": "^16.11.0",
-    "next": "15.3.2",
+    "next": "14.2.9",
     "payload": "^3.45.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -42,7 +41,8 @@
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
     "eslint": "^9.30.1",
-    "eslint-config-next": "15.3.0",
+    "eslint-config-next": "14.2.9",
+    "@next/eslint-plugin-next": "14.2.9",
     "prettier": "^3.6.2",
     "typescript": "5.7.3"
   },
