--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,8 @@
 {
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
   "extends": [
     "next/core-web-vitals",
-    "next/typescript"
+    "plugin:@typescript-eslint/recommended"
   ]
 }
