--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@next/eslint-plugin-next": "14.2.9",
     "@types/node": "^22.16.0",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/parser": "^8.48.1",
     "eslint": "^9.30.1",
     "eslint-config-next": "14.2.9",
-    "@next/eslint-plugin-next": "14.2.9",
     "prettier": "^3.6.2",
     "typescript": "5.7.3"
   },
