--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@payloadcms/db-mongodb": "3.45.0",
-    "@payloadcms/next": "3.45.0",
-    "@payloadcms/payload-cloud": "3.45.0",
-    "@payloadcms/plugin-seo": "^3.45.0",
-    "@payloadcms/richtext-lexical": "3.45.0",
-    "@payloadcms/richtext-slate": "^3.45.0",
-    "@payloadcms/translations": "^3.45.0",
-    "@payloadcms/ui": "3.45.0",
+    "@payloadcms/db-mongodb": "^3.67.0",
+    "@payloadcms/next": "^3.67.0",
+    "@payloadcms/payload-cloud": "^3.67.0",
+    "@payloadcms/plugin-seo": "^3.67.0",
+    "@payloadcms/richtext-lexical": "^3.67.0",
+    "@payloadcms/richtext-slate": "^3.67.0",
+    "@payloadcms/translations": "^3.67.0",
+    "@payloadcms/ui": "^3.67.0",
     "bcrypt": "^6.0.0",
     "cross-env": "^7.0.3",
     "graphql": "^16.11.0",
-    "next": "14.2.9",
-    "payload": "^3.45.0",
+    "next": "^16.0.7",
+    "payload": "^3.67.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "sharp": "^0.32.6",
@@ -39,7 +39,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@next/eslint-plugin-next": "14.2.9",
     "@types/node": "^22.16.0",
-    "@types/react": "19.1.0",
+    "@types/react": "^19.1.0",
     "@types/react-dom": "19.1.2",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
